--- a/OWLgebra/index.html
+++ b/OWLgebra/index.html
@@ -89,7 +89,7 @@ p.ender {
 <img src="images\pun3.png" alt="Cow" height="300">
 
 
-<p class="ender">This site is made for Temple University CIS 1051 final project.</p>
+<p class="ender">This site is made for Elizabeth Abt-Fraioli's Temple University CIS 1051 final project.</p>
 
 
 
