--- a/OWLgebra/4_SkillsQuizzes_subtraction.html
+++ b/OWLgebra/4_SkillsQuizzes_subtraction.html
@@ -106,7 +106,7 @@ body {
 
 <script>
     function addUp() {
-        let MyAnswer = prompt("What is the sum of these numbers?");
+        let MyAnswer = prompt("What is the difference between these numbers?");
         Number(MyAnswer);
       if (MyAnswer != null) {
         document.getElementById("AddItUp").innerHTML = "You said " + MyAnswer + ".";
