--- a/OWLgebra/2_VideoTutorials.html
+++ b/OWLgebra/2_VideoTutorials.html
@@ -76,6 +76,7 @@ li.b {
   <a href="1_MathClassReviews.html">Class Reviews</a>
   <a href="2_VideoTutorials.html">Tutorials</a>
   <a href="3_SkillsQuizzes.html">Quizzes</a>
+  <a href="4_TipsAndTricks.html">Tips and Tricks</a>
   <a href="index.html" class="right">Home</a>
 
 </div>
