--- a/OWLgebra/5_TipsAndTricks.html
+++ b/OWLgebra/5_TipsAndTricks.html
@@ -76,41 +76,41 @@ li.b {
   <a href="1_MathClassReviews.html">Class Reviews</a>
   <a href="2_VideoTutorials.html">Tutorials</a>
   <a href="3_SkillsQuizzes.html">Quizzes</a>
-  <a href="4_TipsAndTricks.html">Tips and Tricks</a>
+  <a href="5_TipsAndTricks.html">Tips and Tricks</a>
   <a href="index.html" class="right">Home</a>
 
 </div>
 </br>
 
-<p><li class="a">Math tips and tricks (definitely not an exhaustive list, but a good start):</p>
-</li>
+<p><strong>Math tips and tricks (definitely not an exhaustive list, but a good start): </strong></p>
+
     
     
 <ul>
-  <li>This might seem basic, but so many silly mistakes are caused by doing order of operations wrong. You can remember P.E.M.D.A.S., or “Please Excuse My Dear Aunt Sally”. This stands for parentheses, exponents, multiplication/division, and addition/subtraction. When you get to multiplication and division, you do all of those at once, from left to right. You do the same for addition and subtraction.</a>
+  <li>This might seem basic, but so many silly mistakes are caused by doing order of operations wrong. You can remember <strong>P.E.M.D.A.S.</strong>, or “Please Excuse My Dear Aunt Sally”. This stands for parentheses, exponents, multiplication/division, and addition/subtraction. When you get to multiplication and division, you do all of those at once, from left to right. You do the same for addition and subtraction.</a>
   </li>
   <br>
   <li>Know your exponent rules; there are 6:</a>
   </li>
   <ul>
-  <li>The product rule: when multiplying two terms with the same base, you can add the exponents to combine the terms.
+  <li><strong>The product rule:</strong> when multiplying two terms with the same base, you can add the exponents to combine the terms.
   </li></ul>
   <ul>
-  <li>The quotient rule: when dividing two terms with the same base, you can subtract the exponents to combine the terms.
+  <li><strong>The quotient rule:</strong> when dividing two terms with the same base, you can subtract the exponents to combine the terms.
   </li></ul>
   <ul>
-  <li>The power rule: if you have a term with a power to another power, you can multiply the powers together.
+  <li><strong>The power rule:</strong> if you have a term with a power to another power, you can multiply the powers together.
   </li></ul>
   <ul>
-  <li>Raising a product to a power: if you have multiple terms multiplied together being raised to a power, you can distribute the power to every term in the product.
+  <li><strong>Raising a product to a power:</strong> if you have multiple terms multiplied together being raised to a power, you can distribute the power to every term in the product.
   </li></ul>
   <ul>
-  <li>Raising a quotient to a power: if you have multiple terms in a quotient being raised to a power, you can distribute the power to every term in the quotient.
+  <li><strong>Raising a quotient to a power:</strong> if you have multiple terms in a quotient being raised to a power, you can distribute the power to every term in the quotient.
   </li></ul>
   <ul>
-  <li>Negative exponent rule: a negative exponent on a term will switch whether the term is in the numerator or the denominator.
+  <li><strong>Negative exponent rule:</strong> a negative exponent on a term will switch whether the term is in the numerator or the denominator.
   </li></ul>
-  <br>  <li>Never divide by zero. If you think about this, it makes a lot of sense. If you have some amount of something, you can’t really split it into zero groups; there will always be at least one. For those of you in calculus especially, something divided by zero means undefined, and can cause behavior like infinite divergence for a function.</a>
+  <br>  <li><strong>Never divide by zero.</strong> If you think about this, it makes a lot of sense. If you have some amount of something, you can’t really split it into zero groups; there will always be at least one. For those of you in calculus especially, something divided by zero means undefined, and can cause behavior like infinite divergence for a function.</a>
   </li>
   <br>  <li>Factoring can be difficult, but there are patterns to it. Think about the greatest common factor, if it is a perfect square trinomial, the difference of squares, factoring by grouping, or if there are two numbers that multiply to the constant and add to be the coefficient of the second term. You can often use more than one method to factor.</a>
   </li>
